# AI_Personal_Agent_SDK

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
ai_personal_agent_sdk/: __init__.py
ai_personal_agent_sdk/core/: agent.py  config.py
ai_personal_agent_sdk/integrations/: google.py  zapier.py
ai_personal_agent_sdk/monitoring/: monitor.py
ai_personal_agent_sdk/security/: encryption.py  permissions.py
ai_personal_agent_sdk/ui/: web_ui.py
ai_personal_agent_sdk/ui/templates/: index.html
examples/: basic_usage.py
